3.0.0 Refactor: Convert User IDs from String to UUID